# CoconutEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  command_prompt.bat
buildengine/: module.bat
src/core/: CMakeLists.txt
src/core/global/: coconutglobal.cpp  coconutglobal.hpp  compilerdetection.hpp  compillerdetection.hpp  platformdetection.hpp  typelist.hpp  typemanip.hpp
src/core/hardware/: CPUInfo.cpp  CPUInfo.hpp  cpu_spec.asm
src/core/memory/: paddingoptimization.hpp
